# LearnOpenGL

./: CMakeLists.txt  README.md
include/: stb_image.h
include/glad/: gl.h
src/: camera.cpp  camera_class.h  color_triangle_example.c  coordinate-systems.cpp  empty_window.c  shader_s.h  shaders.c  shaders.cpp  textures.cpp  textures_solution.cpp  transformations.cpp
src/shaders/: fragmentShader_camera.glsl  fragmentShader_texture.glsl
